--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "dev": "cross-env NODE_PATH=src/ nodemon --exec ts-node src/index.ts",
     "test": "export NODE_ENV=test;cross-env NODE_PATH=src/ ts-mocha -p ./tsconfig.json ./src/app/*/tests.ts",
     "build": "tsc -p .",
-    "start": "cross-env NODE_PATH=dist/ node dist/index.ts",
-    "production-start": "cross-env NODE_PATH=dist/ pm2 start -i max dist/index.ts"
+    "start": "cross-env NODE_PATH=dist/ node dist/index.js",
+    "production-start": "cross-env NODE_PATH=dist/ pm2 start -i max dist/index.js"
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
