--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
     "mongoose": "^5.10.11",
-    "morgan": "^1.10.0",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.0",
